[project]
name = "casablanca"
version = "0.1.0"
description = "A YouTube transcript reader and summarizer"
dependencies = [
    "youtube-transcript-api",
    "google-generativeai",
    "google-api-python-client",
    "python-dotenv",
    "click",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
dev = [
    "tox",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
casablanca = ["*.txt"]
