[tool.poetry]
name = "casablanca"
version = "0.1.0"
description = "A YouTube transcript reader and summarizer"
authors = ["Your Name <your.email@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.12,<3.14"
youtube-transcript-api = "^1.2.1"
google-generativeai = "^0.5.0"
google-api-python-client = "^2.130.0"
python-dotenv = "^1.0.0"
click = "^8.1.7"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
pytest-cov = "^5.0.0"
flake8 = "^7.1.0"
vulture = "^2.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"